--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express": "^4.15.2",
     "socket.io": "^1.7.3",
     "sox": "^0.1.0",
-    "wav": "^1.0.1",
-    "webpack": "^2.3.3"
+    "wav": "^1.0.1"
   }
 }
